--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ h1,h2,h3,h4,h5 {
     color: #333;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 h6{
     padding-top: 30px;
     text-transform: uppercase;
@@ -37,6 +42,10 @@ h2{
 
 ul{
     padding-bottom: 20px;
+}
+
+.list-group-item {
+    border-style: none;
 }
 
 .headbar {
